// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not render anything if the field does not have an error 1`] = `<div />`;

exports[`renders a field error if one exists 1`] = `
<div>
  <div
    class="error"
  >
    Email 
    is required
  </div>
</div>
`;

exports[`renders field-less errors 1`] = `
<div>
  <div
    class="error"
  >
    Form is disabled
  </div>
</div>
`;
